--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+
+
 body {
-  margin: 0 auto;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #8f8f8f;
+  
 }
 
 code {
@@ -12,9 +16,35 @@ code {
     monospace;
 }
 
-.todo {
-  cursor: pointer;
-}
-.strike {
-  text-decoration: line-through;
-}
+
+ .isOpen{
+   opacity: 1;
+   z-index: 999;
+ }
+ .modal-content {
+   background: #fff;
+   width: 90vw;
+   max-width: 670px;
+   padding: 3rem;
+   border-radius: 0.25rem;
+   text-align: center;
+   position: relative;
+ }
+ .modal-content p {
+   font-size: 1.5rem;
+   text-transform: none;
+ }
+ .text-2xl{
+   color: rgb(253, 253, 253);
+  font-size : 50px;
+  text-align: center;
+  margin-top: 70px;
+
+  }
+ 
+
+ .button{
+   color: blue;
+   font-size: 200px;
+   text-align: center;
+ }
